# farbraum

./: Cargo.toml  Color_spaces.md  README.md  clippy.toml
src/: color.rs  illuminate.rs  lab_util.rs  lib.rs  serde_impl.rs  spaces.rs  test_util.rs  util.rs  vec3.rs  whites.rs
src/spaces/: adobe98.rs  cielab.rs  cielab_d50.rs  cielab_d65.rs  cielch.rs  cielchuv.rs  cieluv.rs  cmy.rs  cubehelix.rs  dlab.rs  dlch.rs  hsi.rs  hsl.rs  hsv.rs  hwb.rs  jab.rs  jch.rs  lab.rs  lrgb.rs  oklab.rs  oklch.rs  util.rs  xyz.rs  xyz_d50.rs  xyz_d65.rs
