[package]
name = "farbraum"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aloso/farbraum"
homepage = "https://github.com/Aloso/farbraum"
description = "Color space conversions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["double-precision"]

# Use f64 for color components instead of f32 (enabled by default)
double-precision = []
